6/studio6.txt
1. Yifan Wang 488500

2. OutPut:

    LOW MEDIUM HIGH POP 
    MON TUE WED THU FRI SAT SUN 

3. Code added to source file:
    using std::cout;
    using std::ostream;

4. Here is the compile error

    Pressure p= Pressure::lo;
        ^~~~~~~~
    6_1.cpp:10:5: note: suggested alternative:
    In file included from 6_1.cpp:2:
    6.h:17:12: note:   'enumerations::Pressure'
    enum class Pressure{
                ^~~~~~~~
    6_1.cpp:11:5: error: 'Weekday' was not declared in this scope
        Weekday w=Weekday::Monday;
        ^~~~~~~
    6_1.cpp:11:5: note: suggested alternative:
    In file included from 6_1.cpp:2:
    6.h:6:12: note:   'enumerations::Weekday'
    enum class Weekday{
                ^~~~~~~
    6_1.cpp:23:15: error: 'p' was not declared in this scope
            cout<<p;
                ^
    6_1.cpp:27:15: error: 'w' was not declared in this scope
            cout<<w;
                ^
    
5